--- a/pages/home/components/collapse-item/index.wxss
+++ b/pages/home/components/collapse-item/index.wxss
@@ -14,7 +14,6 @@
     justify-content: space-between;
     flex-direction: row;
     width: 100%;
-
 }
 .left {
     width: 70%;
@@ -34,7 +33,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 10px 10px;
-    font-size: 28rpx;
+    font-size: 16px;
 }
 .i-collapse-item-content{
     display:none;
