--- a/pages/home/home.scss
+++ b/pages/home/home.scss
@@ -2,70 +2,73 @@ page {
   height: 100%;
   padding: 0;
 }
-.container{
+
+.container {
   padding: 0;
   height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-  .header{
-    padding: 5px;
-    width: 100%;
-    box-sizing:border-box;
+ .header {
+   padding: 5px;
+   width: 100%;
+   box-sizing: border-box;
+   .header-wrap {
+     width: 100%;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: center;
+     position: relative;
 
-    .header-wrap{
+     .userinfo-avatar {
+       width: 70rpx;
+       height: 70rpx;
+       border-radius: 50%;
+     }
 
-      width: 100%;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: center;
-      position: relative;
+     .userinfo-nickname {
+       width: 75%;
+       position: relative;
+       padding-left: 10px;
+     }
+   }
+ }
 
-      .userinfo-avatar{
-        width: 70rpx;
-        height: 70rpx;
-        border-radius: 50%;
-      }
-
-      .userinfo-nickname {
-        width: 75%;
-        position: relative;
-        padding-left: 10px;
-      }
-    }
-  }
-
-  .content{
+  .content {
     width: 100%;
     height: 100%;
     overflow-y: auto;
-    .top{
-       margin-top: 10px;
-       .list{
-         .item{
-           padding: 10px;
-           .wrap{
-             display: flex;
-             flex-direction: row;
-             align-items: center;
-             justify-content: space-between;
-             font-size: 28rpx;
-             font-weight: bold;
-             width: 100%;
-
-             .title{
-               width: 100%;
-               padding-left: 10px;
-             }
-           }
-         }
-       }
-     }
-
-    .bottom{
-      margin-top: 15px;
+    .top {
+      margin-top: 10px;
       .list{
-        .group-content{
-          .group-item{
+        .item{
+          padding: 10px;
+          .wrap {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            font-size: 28rpx;
+            font-weight: bold;
+            width: 100%;
+
+            .title {
+              width: 100%;
+              padding-left: 10px; }
+          }
+        }
+      }
+    }
+    .bottom {
+      margin-top: 15px;
+
+      .list{
+        .group-content {
+          .group-item {
+            box-sizing: border-box;
+
             position: relative;
             width: 100%;
             display: flex;
@@ -74,33 +77,32 @@ page {
             justify-content: center;
             padding: 10px 5px 10px 15px;
             font-size: 28rpx;
-
-            .v-line{
+            .v-line {
               left: 22px;
               position: absolute;
               height: 100%;
               border-right: 2px solid #e0e0e0;
             }
 
-            .title{
+            .title {
               width: 70%;
               margin-left: 10px;
+              font-size: 16px;
             }
           }
         }
 
-        .item{
+        .item {
           padding: 10px;
           font-size: 30rpx;
-
-          .item-wrap{
+          .item-wrap {
             display: flex;
             justify-content: space-between;
             align-items: center;
-
-            .title{
+            .title {
               width: 100%;
               padding-left: 10px;
+              font-size: 16px;
             }
           }
         }
@@ -108,13 +110,12 @@ page {
     }
   }
 
-  .footer{
+  .footer {
     padding: 10px 15px 10px 10px;
     width: 100%;
-    box-sizing:border-box;
+    box-sizing: border-box;
     border-top: 1px solid ghostwhite;
-
-    .wrap{
+    .wrap {
       display: flex;
       flex-direction: row;
       align-items: center;
@@ -122,19 +123,13 @@ page {
       font-size: 30rpx;
       color: #38f;
       width: 100%;
-
-
-      .title{
+      .title {
         width: 100%;
         margin-left: 10px;
       }
-
-      .create-group{
-        //border: 1px solid red;
+      .create-group {
         position: relative;
-
-        .plus{
-          //border: 1px solid red ;
+        .plus {
           position: absolute;
           right: -7px;
           top: -10px;
@@ -142,14 +137,173 @@ page {
       }
     }
   }
+
+  .new-group-input{
+    input {
+      width: 80%;
+      margin: 0 auto;
+      text-align: left;
+      padding: 3px 10px;
+      background-color: #eaf6ff;
+      border-radius: 4px;
+    }
+  }
+  i-action-sheet{
+    .header{
+      border-top-right-radius: 4px;
+      border-top-left-radius: 4px;
+
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+      align-items: center;
+      position: relative;
+      font-weight: 400;
+      padding: 16px;
+
+      text{
+        position: absolute;
+        width: 100%;
+        text-align: center;
+        font-size: 36rpx;
+        color: black;
+      }
+
+      view{
+        color: royalblue;
+        font-weight: bold;
+        z-index: 1;
+      }
+    }
+  }
+
+  .modal{
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #80808080;
+
+    .wrap{
+      margin-top: -100px;
+      box-sizing: border-box;
+      background-color: ghostwhite;
+      border-radius: 8px;
+      .header{
+        text-align: center;
+        padding: 10px 0;
+        font-size: 17px;
+        font-weight: bold;
+      }
+
+      .content{
+        padding: 8px 14px;
+        box-sizing: border-box;
+        input {
+          padding: 4px 10px;
+          background-color: white;
+          border-radius: 5px;
+        }
+      }
+
+      .footer{
+        padding: 0;
+        display: flex;
+        justify-content: space-between;
+        view{
+          width: 50%;
+          height: 100%;
+          text-align: center;
+          padding: 8px 0;
+          color: #3388ff;
+        }
+
+        .cancel{
+          border-top: 2px solid #f3f3f3;
+          border-right: 2px solid #f3f3f3;
+        }
+
+        .confirm{
+          border-top: 2px solid #f3f3f3;
+        }
+      }
+    }
+  }
+
+  .group-lists-operate{
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0,0,0,.6);
+
+    .wrap {
+      box-sizing: border-box;
+      background-color: ghostwhite;
+      border-radius: 8px;
+      width: 90%;
+
+      .header {
+        text-align: center;
+        padding: 10px 10px;
+        font-size: 17px;
+        font-weight: bold;
+        display: flex;
+        justify-content: space-between;
+        border-bottom: 1px solid lightgrey;
+
+        .cancel{
+          color: #3388ff;
+          font-weight: 400;
+          font-size: 16px;
+        }
+        .jump{
+          color: #3388ff;
+          font-weight: 400;
+          font-size: 16px;
+        }
+      }
+      .content{
+        padding: 10px;
+        box-sizing: border-box;
+
+        .group{
+          max-height: 250px;
+
+          .item{
+            display: flex;
+            justify-content: space-between;
+            box-sizing: border-box;
+            border-bottom: 1px solid ghostwhite;
+            padding: 10px 5px;
+            .name{
+              width: 100%;
+              padding-left: 12px;
+            }
+          }
+
+          .item:last-child {
+            border: none;
+          }
+        }
+      }
+    }
+
+  }
 }
 
-
-.divLine{
-  //background: #E0E3DA;
+.divLine {
   width: 90%;
   height: 5rpx;
   margin: 0 auto;
   border-bottom: 1px solid #E0E3DA;
-  padding: 10px 0;
+  padding: 10px 0; }
+
+.i-swipeout-demo-button-group {
+  border: 1px solid red;
 }
+
