- release 1.0.0 version feature

--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -11,6 +11,7 @@
 
     <view class="content">
         <view class="top">
+            <auth id='authorization'></auth>
             <view class="list">
                 <view class="item" bindtap="redirectPage" data-page="myday">
                     <view class="wrap">
